--- a/HTML2.html
+++ b/HTML2.html
@@ -9,10 +9,10 @@
 	Welcome to my website
 </div>
 <div class="row2">
-	<div class="row2-col1">Home</div>
-	<div class="row2-col2">About</div>
-	<div class="row2-col3">Courses</div>
-	<div class="row2-col4">Gallery</div>
+	<div class="row2-col1">Home 1</div>
+	<div class="row2-col2">About 1</div>
+	<div class="row2-col3">Courses 1</div>
+	<div class="row2-col4">Gallery 1</div>
 	<div class="row2-col5">Contact Us</div>
 	
 </div>
